--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
@@ -7,7 +7,7 @@
 # docker run --rm -it bsbdock/nexus:dev_linux-amd64 bash
 #
 # How to invoke a shell into this container:
-# docker run --rm -it bsbdock/nexus:linux_amd64 bash
+# docker run --rm -it bsbdock/nexus:dev bash
 #
 # How to run the reticulum stack as a service
 # docker run --rm --name nexus-prod_nexus -it bsbdock/nexus
@@ -59,8 +59,8 @@ ENV PATH="$HOME/.local/bin:$PATH"
 # Add local user 'bsb'
 RUN groupadd -r bsb --gid=9001 && useradd -r -g bsb -m --uid=9001 bsb
 # Grant him sudo privileges
-# RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
-#    chmod 0440 /etc/sudoers.d/bsb
+RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
+    chmod 0440 /etc/sudoers.d/bsb
 
 # Switch to user bsb
 USER bsb
