--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-arm
@@ -1,7 +1,15 @@
 ############################################################
-# bsbdock/reticulum Dockerfile
+# bsbdock/nexus Dockerfile
+#
+# How to build this container:
+# bash build.sh arm
+# docker run --rm -it bsbdock/nexus:dev bash
+#
+# How to invoke a shell into this container:
+# docker run --rm -it bsbdock/nexus:dev bash
 #
 FROM python:3.9
+RUN set -eux
 
 # Set timezone and interactive mode
 ENV TZ=Europe/Berlin DEBIAN_FRONTEND=noninteractive
@@ -10,37 +18,37 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 # Update base image if necessary
-RUN apt-get -y update && apt-get -y upgrade
-RUN apt-get -y install tzdata sudo
+RUN apt-get -y update && apt-get -y upgrade &&\
+    apt-get -y install tzdata sudo
 
-# Install pip3
-RUN apt-get -y install python3-pip
+# Install some optional helper tools
+RUN apt-get -y install mc nano vim screen
 
-# Build essentials for rust
-RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
-# Install rust
-RUN apt-get -y install curl
-RUN curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
+# Install and upgrde pip3
+RUN apt-get -y install python3-pip &&\
+    pip3 install --upgrade pip
+
+# Build essentials and install rust
+RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
+    curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
 ENV PATH="/root/.cargo/bin:$PATH"
 
-# Install personal helper tools
-RUN apt-get -y install mc nano vim screen
+# Install requiered python packages
+RUN pip3 install cryptography
 
 # Install components for django production deplyment
 #RUN apt-get -y install systemctl uwsgi uwsgi-plugin-python3 nginx
-RUN apt-get -y install nginx systemctl
-RUN systemctl enable nginx
+RUN apt-get -y install nginx systemctl &&\
+    systemctl enable nginx
 
 # Install TNC for radio networking (direwolf)
 RUN apt-get -y install direwolf
 
-# grab gosu for easy step-down from root
-RUN set -eux
-RUN	apt-get update
-RUN	apt-get install -y gosu
-RUN	rm -rf /var/lib/apt/lists/*
-# verify that the binary works
-RUN	gosu nobody true
+# grab gosu for easy step-down from root and check if it works
+RUN	apt-get update &&\
+   	apt-get install -y gosu &&\
+   	rm -rf /var/lib/apt/lists/* &&\
+    gosu nobody true
 
 # Set Home dir and path fpr user bsb
 ENV HOME /home/bsb
@@ -56,10 +64,8 @@ RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
 USER bsb
 WORKDIR $HOME
 
-# Upgrade pip
-RUN pip install --upgrade pip
 # Install requiered python packages
-RUN pip install cryptography rns lxmf nomadnet rnodeconf requests pytz Django gunicorn psycopg2-binary gevent
+RUN pip3 install rns lxmf nomadnet rnodeconf requests pytz Django gunicorn psycopg2-binary gevent
 
 # Change to root
 USER root
@@ -69,13 +75,13 @@ COPY . .
 # Set ownership to usr bsb
 RUN chown -R bsb:bsb $HOME
 # Make some scripts executable
-RUN chmod +x entrypoint.sh
-RUN chmod +x start.sh
-RUN chmod +x start_django.sh
+RUN chmod +x entrypoint.sh &&\
+    chmod +x start.sh &&\
+    chmod +x start_django.sh
 # Move script to bin
-RUN mv entrypoint.sh /usr/local/bin
-RUN mv start.sh /usr/local/bin
-RUN mv start_django.sh /usr/local/bin
+RUN mv entrypoint.sh /usr/local/bin &&\
+    mv start.sh /usr/local/bin &&\
+    mv start_django.sh /usr/local/bin
 
 # Change to bsb again to install python packages indicated at the rerquirents.txt
 # This will be done without cache usage
@@ -83,7 +89,7 @@ USER bsb
 WORKDIR $HOME
 
 # Install required python packages
-RUN pip install -r ./requirements.txt
+RUN pip3 install -r ./requirements.txt
 
 # Move to Django
 WORKDIR $HOME/nexus_django
@@ -94,16 +100,16 @@ RUN mkdir static
 
 # Collect static files
 #RUN python manage.py collectstatic --no-input --clear
-RUN ./manage.py collectstatic --no-input --clear
-RUN ./manage.py flush --no-input
+RUN ./manage.py collectstatic --no-input --clear &&\
+    ./manage.py flush --no-input
 
 # Back to root to finalize stuff
 USER root
 WORKDIR $HOME
 
 # Configure Nginx
-RUN rm /etc/nginx/sites-enabled/default
-RUN ln -s /home/bsb/nexus.nginx.conf /etc/nginx/sites-enabled/nexus.nginx.conf
+RUN rm /etc/nginx/sites-enabled/default &&\
+    ln -s /home/bsb/nexus.nginx.conf /etc/nginx/sites-enabled/nexus.nginx.conf
 
 # Expose port for Reticulum server TCP Interface (disable as default)
 ENV NEXUS_CONTAINER_RNS_PORT 4242
