Django Server RNS Test - New generic build script

--- a/bsbdock.nexus_context/hooks/build
+++ b/bsbdock.nexus_context/hooks/build
@@ -2,4 +2,5 @@
 docker buildx build -t bsbdock/nexus:dev\
  --push\
  --platform linux/amd64,linux/arm64,linux/arm\
- -f Dockerfile_nexus_dev_auto
+ -f Dockerfile_nexus_dev_auto\
+ .
