--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -11,7 +11,7 @@
 FROM alpine AS qemu
 
 #QEMU Download
-ENV QEMU_URL https://github.com/balena-io/qemu/releases/tag/v6.0.0%2Bbalena1
+ENV QEMU_URL https://github.com/balena-io/qemu/releases/download/v6.0.0%2Bbalena1/qemu-6.0.0.balena1-arm.tar.gz
 RUN apk add curl && curl -L ${QEMU_URL} | tar zxvf - -C . --strip-components 1
 
 FROM balenalib/armv7hf-python:3.9
