--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm64
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm64
@@ -11,7 +11,7 @@
 FROM alpine AS qemu
 
 #QEMU Download
-ENV QEMU_URL https://github.com/balena-io/qemu/releases/download/v3.0.0%2Bresin/qemu-3.0.0+resin-aarch64.tar.gz
+ENV QEMU_URL https://github.com/balena-io/qemu/releases/download/v6.0.0%2Bbalena1/qemu-6.0.0.balena1-aarch64.tar.gz
 RUN apk add curl && curl -L ${QEMU_URL} | tar zxvf - -C . --strip-components 1
 
 FROM balenalib/aarch64-python:3.9
