--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -33,6 +33,8 @@ RUN apt-get -y update && apt-get -y upgrade &&\
 # Install some optional helper tools
 RUN apt-get -y install mc nano vim screen
 
+RUN pip3 install pipenv
+
 # Install and upgrde pip3
 RUN apt-get -y install python3-pip &&\
     pip3 install --upgrade pip
