Django Server RNS Test - New generic build script

--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -49,8 +49,7 @@ RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
 USER bsb
 WORKDIR $HOME
 
-
-
+RUN python3 -m venv $HOME/venv
 
 
 # Install and upgrde pip3
