--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -49,11 +49,12 @@ RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
 USER bsb
 WORKDIR $HOME
 
-RUN python3 -m venv $HOME/venv
-
-
+RUN python3 -m venv $HOME/venv && source venv/bin/activate
 # Install and upgrde pip3
-#RUN apt-get -y install python3-pip &&\
+RUN apt-get -y install python3-pip
+
+
+#    &&\
 #    pip3 install --upgrade pip
 
 # Build essentials and install rust
