--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -49,7 +49,8 @@ RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
 USER bsb
 WORKDIR $HOME
 
-RUN python3 -m venv $HOME/venv && source venv/bin/activate
+RUN python3 -m venv $HOME/venv
+RUN source $HOME/venv/bin/activate
 # Install and upgrde pip3
 RUN apt-get -y install python3-pip
 
