Django Server RNS Test - New generic build script

--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -52,7 +52,7 @@ WORKDIR $HOME
 RUN python3 -m virtualenv $HOME/venv
 RUN source $HOME/venv/bin/activate
 # Install and upgrde pip3
-RUN apt-get -y install python3-pip
+#RUN apt-get -y install python3-pip
 
 
 #    &&\
