--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -50,7 +50,7 @@ USER bsb
 WORKDIR $HOME
 
 RUN python3 -m venv ~/venv
-RUN source ~/venv/bin/activate
+RUN . ~/venv/bin/activate
 # Install and upgrde pip3
 #RUN apt-get -y install python3-pip
 
