--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -52,19 +52,16 @@ WORKDIR $HOME
 RUN python3 -m venv ~/venv
 RUN . ~/venv/bin/activate
 # Install and upgrde pip3
-#RUN apt-get -y install python3-pip
-
-
-#    &&\
-#    pip3 install --upgrade pip
+RUN sudo apt-get -y install python3-pip
+RUN sudo pip3 install --upgrade pip
 
 # Build essentials and install rust
-#RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
-#    curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
-#ENV PATH="/root/.cargo/bin:$PATH"
+RUN sudo apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
+    curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
+ENV PATH="/root/.cargo/bin:$PATH"
 
 # Install requiered python packages
-#RUN pip3 install cryptography
+RUN pip3 install cryptography
 
 # Install components for django production deplyment
 #RUN apt-get -y install systemctl uwsgi uwsgi-plugin-python3 nginx
