--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -52,12 +52,14 @@ WORKDIR $HOME
 RUN python3 -m venv ~/venv
 RUN . ~/venv/bin/activate
 # Install and upgrde pip3
-RUN sudo apt-get -y install python3-pip
-RUN sudo pip3 install --upgrade pip
+USER root
+RUN apt-get -y install python3-pip
+RUN pip3 install --upgrade pip
 
 # Build essentials and install rust
-RUN sudo apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
+RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
     curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
+USER bsb
 ENV PATH="/root/.cargo/bin:$PATH"
 
 # Install requiered python packages
