--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -45,16 +45,13 @@ RUN groupadd -r bsb --gid=9001 && useradd -r -g bsb -m --uid=9001 bsb
 RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
     chmod 0440 /etc/sudoers.d/bsb
 
-# Switch to user bsb
-USER bsb
 WORKDIR $HOME
+ARG CACHEBUST=1
 
 RUN python3 -m venv ~/venv
-RUN . ~/venv/bin/activate
+RUN . $HOME/venv/bin/activate
 
-ARG CACHEBUST=1
 # Install and upgrde pip3
-USER root
 RUN apt-get -y install python3-pip
 RUN pip3 install --upgrade pip
 
