--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -45,6 +45,7 @@ RUN groupadd -r bsb --gid=9001 && useradd -r -g bsb -m --uid=9001 bsb
 RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
     chmod 0440 /etc/sudoers.d/bsb
 
+USER bsb
 WORKDIR $HOME
 ARG CACHEBUST=1
 
@@ -52,17 +53,18 @@ RUN python3 -m venv ~/venv
 RUN . $HOME/venv/bin/activate
 
 # Install and upgrde pip3
+USER root
 RUN apt-get -y install python3-pip
-RUN pip3 install --upgrade pip
+#RUN pip3 install --upgrade pip
 
 # Build essentials and install rust
-RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
-    curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
-USER bsb
-ENV PATH="/root/.cargo/bin:$PATH"
+#RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
+#    curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
+#USER bsb
+#ENV PATH="/root/.cargo/bin:$PATH"
 
 # Install requiered python packages
-RUN pip3 install cryptography
+#RUN pip3 install cryptography
 
 # Install components for django production deplyment
 #RUN apt-get -y install systemctl uwsgi uwsgi-plugin-python3 nginx
