--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -25,41 +25,42 @@ ENV TZ=Europe/Berlin DEBIAN_FRONTEND=noninteractive
 # set environment variables for python
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
+# Set user bsbs HOME env
+ENV HOME /home/bsb
 
-# Update base image if necessary
-RUN apt-get -y update && apt-get -y upgrade &&\
-    apt-get -y install tzdata sudo
+# Install pip3
+RUN apt -y install python3-pip
+RUN pip install --upgrade pip
+
+# Build essentials and install rust
+RUN apt -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
+    curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
 
 # Install some optional helper tools
 RUN apt-get -y install mc nano vim screen
 
-# Build essentials and install rust
-RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
-    curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
-
 ##########
 
 # Set Home dir and path fpr user bsb
-ENV HOME /home/bsb
-ENV PATH="$HOME/.local/bin:$PATH"
+#ENV PATH="$HOME/.local/bin:$PATH"
 
 # Add local user 'bsb'
-RUN groupadd -r bsb --gid=9001 && useradd -r -g bsb -m --uid=9001 bsb
+#RUN groupadd -r bsb --gid=9001 && useradd -r -g bsb -m --uid=9001 bsb
 # Grant him sudo privileges
-RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
-    chmod 0440 /etc/sudoers.d/bsb
+#RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
+#    chmod 0440 /etc/sudoers.d/bsb
 
-USER bsb
-WORKDIR $HOME
+#USER bsb
+#WORKDIR $HOME
 
-RUN python3 -m venv ~/venv
-RUN . $HOME/venv/bin/activate
+#RUN python3 -m venv ~/venv
+#RUN . $HOME/venv/bin/activate
 # RUN . /root/.cargo/env ????
-ENV PATH="/root/.cargo/bin:$PATH"
+#ENV PATH="/root/.cargo/bin:$PATH"
 
-RUN python -m ensurepip --upgrade
+#RUN python -m ensurepip --upgrade
 
-ARG CACHEBUST=1
+#ARG CACHEBUST=1
 # Install and upgrde pip3
 #RUN apt-get -y install python3-pip
 #RUN pip install --upgrade pip
