--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -29,11 +29,11 @@ ENV PYTHONUNBUFFERED 1
 ENV HOME /home/bsb
 
 # Install pip3
-RUN apt -y install python3-pip
+RUN apt-get -y install python3-pip
 RUN pip install --upgrade pip
 
 # Build essentials and install rust
-RUN apt -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
+RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
     curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
 
 # Install some optional helper tools
