--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -28,8 +28,12 @@ ENV PYTHONUNBUFFERED 1
 # Set user bsbs HOME env
 ENV HOME /home/bsb
 
+# Update base image if necessary
+RUN apt-get update
+RUN apt-get install tzdata
+
 # Install pip3
-RUN apt-get -y install python3-pip
+RUN apt -y install python3-pip
 RUN pip install --upgrade pip
 
 # Build essentials and install rust
