--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -32,16 +32,17 @@ ENV HOME /home/bsb
 RUN apt-get update
 RUN apt-get install tzdata
 
+RUN python -m ensurepip --upgrade
 # Install pip3
-RUN apt -y install python3-pip
-RUN pip install --upgrade pip
+# RUN apt -y install python3-pip
+#RUN pip install --upgrade pip
 
 # Build essentials and install rust
-RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
-    curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
+#RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
+ #   curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
 
 # Install some optional helper tools
-RUN apt-get -y install mc nano vim screen
+#RUN apt-get -y install mc nano vim screen
 
 ##########
 
