Django Server RNS Test - New generic build script

--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -32,7 +32,8 @@ ENV HOME /home/bsb
 RUN apt-get update
 RUN apt-get install tzdata
 
-RUN python -m ensurepip --upgrade
+RUN python -m pip install --upgrade pip
+#RUN python3 -m ensurepip --upgrade
 # Install pip3
 # RUN apt -y install python3-pip
 #RUN pip install --upgrade pip
