--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -33,6 +33,10 @@ RUN apt-get update
 RUN apt-get install tzdata
 
 RUN python -m pip install --upgrade pip
+
+RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
+    curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
+
 #RUN python3 -m ensurepip --upgrade
 # Install pip3
 # RUN apt -y install python3-pip
