--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -25,8 +25,6 @@ ENV TZ=Europe/Berlin DEBIAN_FRONTEND=noninteractive
 # set environment variables for python
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
-# Set user bsbs HOME env
-ENV HOME /home/bsb
 
 # Update base image if necessary
 RUN apt-get update
@@ -36,6 +34,10 @@ RUN python -m pip install --upgrade pip
 
 RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
     curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
+ENV PATH="/root/.cargo/bin:$PATH"
+
+# Build/Install cryptography
+RUN pip3 install cryptography
 
 #RUN python3 -m ensurepip --upgrade
 # Install pip3
@@ -60,6 +62,8 @@ RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-
 #RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
 #    chmod 0440 /etc/sudoers.d/bsb
 
+# Set user bsbs HOME env
+#ENV HOME /home/bsb
 #USER bsb
 #WORKDIR $HOME
 
