Django Server RNS Test - New generic build script

--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -37,7 +37,7 @@ RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-
 ENV PATH="/root/.cargo/bin:$PATH"
 
 # Build/Install cryptography
-RUN pip3 install cryptography
+# RUN pip3 install cryptography
 
 #RUN python3 -m ensurepip --upgrade
 # Install pip3
