Django Server RNS Test - New generic build script

--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -19,6 +19,7 @@ FROM balenalib/armv7hf-python:3.9
 COPY --from=qemu qemu-arm-static /usr/bin
 
 RUN set -eux
+SHELL ["/bin/bash", "-c"]
 
 # Set timezone and interactive mode
 ENV TZ=Europe/Berlin DEBIAN_FRONTEND=noninteractive
