--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -34,7 +34,7 @@ RUN apt-get install tzdata
 RUN python -m pip install --upgrade pip
 
 RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python3-dev python3
-# RUN curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
+RUN curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
 
 # ENV PATH="/root/.cargo/bin:$PATH"
 
