--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -36,7 +36,8 @@ RUN python -m pip install --upgrade pip
 RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python3-dev python3
 RUN curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
 
-# ENV PATH="/root/.cargo/bin:$PATH"
+RUN source $HOME/.cargo/env
+#ENV PATH="/root/.cargo/bin:$PATH"
 
 # Build/Install cryptography
 # RUN pip3 install cryptography
