--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@
 # docker exec -it nexus-server_node01 nomadnet
 # docker exec -it nexus-server_node01 python3 /bsb/nexus_server/nexus_server.py
 # python3 ~/nexus/bsbdock.nexus_context/nexus_server/nexus_server.py
+# python3 ./bsbdock.nexus_context/nexus_server/nexus_server.py --aspect=delta --role={\"cluster\":\"lora\"} --timeout=90 --longpoll=60
 
 # Default nexus home on local filesystem
 # If your local environment differs uncomment and change the required setting
