--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -29,7 +29,7 @@ RUN apt-get update
 RUN apt-get install tzdata
 
 # Install pip3
-RUN apt -y install python3-pip
+RUN apt-get -y install python3-pip
 #RUN pip install --upgrade pip
 
 # Build essentials
