--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -33,7 +33,7 @@ RUN apt-get -y install python3-pip
 RUN pip install --upgrade pip
 
 # Build essentials
-#RUN apt -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
+RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
 
 # Install rust
 #RUN apt -y install curl
