--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -35,16 +35,14 @@ RUN pip install --upgrade pip
 # Build essentials
 RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
 
-# Install rust
-#RUN apt -y install curl
-#RUN curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
-#ENV PATH="/root/.cargo/bin:$PATH"
-
 # Build/Install cryptography
 RUN pip3 install cryptography
 
 # Install requiered python packages
 RUN pip3 install rns lxmf nomadnet rnodeconf requests pytz Django gunicorn psycopg2-binary gevent
+
+# Install some optional helper tools
+RUN apt-get -y install mc nano vim screen
 
 
 ######################
@@ -82,8 +80,7 @@ RUN pip3 install rns lxmf nomadnet rnodeconf requests pytz Django gunicorn psyco
 #RUN apt-get -y install curl build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 &&\
  #   curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
 
-# Install some optional helper tools
-#RUN apt-get -y install mc nano vim screen
+
 
 ##########
 
