Django Server RNS Test - New generic build script

--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -55,8 +55,7 @@ RUN apt-get -y install nginx systemctl &&\
 RUN apt-get -y install direwolf
 
 # grab gosu for easy step-down from root and check if it works
-RUN	apt-get update &&\
-   	apt-get install -y gosu &&\
+RUN	apt-get install -y gosu &&\
    	rm -rf /var/lib/apt/lists/* &&\
       gosu nobody true
 
